# async-trait-proto

./: Cargo.toml  README.md
.github/workflows/: benchmark.yml  rust.yml
benches/: comparison.rs
dev/bench/: data.js
src/: lib.rs
tests/: basic.rs
