[package]
name = "async_trait_proto"
version = "0.0.2"
authors = ["umgefahren <55623006+umgefahren@users.noreply.github.com>"]
description = "Async traits using nightly features"
keywords = ["async", "async-trait", "nightly"]
edition = "2021"
license = "Unlicense"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
rustversion = "1.0"



[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }
async-trait = "0.1"
rand = "0.8"
tokio = { version = "1", features = ["rt", "time", "macros"]}

[[bench]]
name = "comparison"
harness = false